[gd_scene load_steps=2 format=3 uid="uid://djjyqt48nmfku"]

[ext_resource type="Script" uid="uid://caep28jgy74td" path="res://global/global.gd" id="1_lros2"]

[node name="directions" type="Node2D"]
script = ExtResource("1_lros2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1147.0
offset_bottom = 646.0
color = Color(0.17182475, 0.26981017, 0.2249718, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 399.0
offset_right = 1149.0
offset_bottom = 644.0
theme_override_constants/separation = 16
alignment = 1

[node name="Volume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Volume"

[node name="Direction" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Directions"

[connection signal="pressed" from="VBoxContainer/Direction" to="." method="_on_direction_pressed"]
