[gd_scene load_steps=14 format=3 uid="uid://bvmt4ppfunoyf"]

[ext_resource type="Script" uid="uid://caep28jgy74td" path="res://global/global.gd" id="1_yqeox"]
[ext_resource type="Texture2D" uid="uid://cgjxlxy4mphcs" path="res://Images/pumpkins/StartScreen.png" id="2_mj5lg"]
[ext_resource type="FontFile" uid="uid://bh4qluvrxpfm3" path="res://fonts/Horror Creepy.otf" id="2_vjb58"]
[ext_resource type="Texture2D" uid="uid://6t7pumygcwa" path="res://Images/pumpkins/squash.png" id="3_70i5f"]
[ext_resource type="Texture2D" uid="uid://dcm1uutenl3v3" path="res://Images/pumpkins/pumpkin2.png" id="4_mj5lg"]
[ext_resource type="Texture2D" uid="uid://bnwja1u4hx72p" path="res://Images/pumpkins/pumpkin1.png" id="5_ufwb2"]
[ext_resource type="Texture2D" uid="uid://c40l16a50yfvo" path="res://Images/pumpkins/vine1.png" id="6_6cdou"]
[ext_resource type="Texture2D" uid="uid://3dc2rahamwj0" path="res://Images/pumpkins/vine3.png" id="7_i42df"]
[ext_resource type="Texture2D" uid="uid://dwtjmit3ifjro" path="res://Images/pumpkins/pumpkin3.png" id="8_7jp70"]
[ext_resource type="Texture2D" uid="uid://ceyqp1jo054dg" path="res://Images/pumpkins/vine4.png" id="9_mxgkd"]
[ext_resource type="Texture2D" uid="uid://d4ehqjare5te4" path="res://Images/pumpkins/vine2.png" id="10_g6gyw"]
[ext_resource type="Texture2D" uid="uid://ceoj71lx73dxk" path="res://Images/Cauldron.png" id="12_6cdou"]
[ext_resource type="Texture2D" uid="uid://bgo8qxtbxsf85" path="res://Images/Crack.png" id="13_i42df"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqeox")

[node name="StartScreen" type="Sprite2D" parent="."]
position = Vector2(964, 538)
texture = ExtResource("2_mj5lg")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -131.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 175
text = "The Murder of Brian White"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 125
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 125
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vjb58")
theme_override_font_sizes/font_size = 125
text = "Exit"

[node name="Squash" type="Sprite2D" parent="VBoxContainer2/VBoxContainer"]
position = Vector2(-648, 367.5)
scale = Vector2(0.6660157, 0.7480469)
texture = ExtResource("3_70i5f")

[node name="Pumpkin2" type="Sprite2D" parent="VBoxContainer2/VBoxContainer"]
position = Vector2(-421, 332.5)
texture = ExtResource("4_mj5lg")

[node name="Pumpkin1" type="Sprite2D" parent="."]
position = Vector2(292, 950)
texture = ExtResource("5_ufwb2")

[node name="Vine1" type="Sprite2D" parent="."]
position = Vector2(18, 567)
scale = Vector2(2.4609375, 4.03125)
texture = ExtResource("6_6cdou")

[node name="Vine3" type="Sprite2D" parent="."]
position = Vector2(1341, 793)
scale = Vector2(2.1875, 2.0104167)
texture = ExtResource("7_i42df")

[node name="Pumpkin3" type="Sprite2D" parent="."]
position = Vector2(521, 935)
scale = Vector2(0.71484375, 0.7207031)
texture = ExtResource("8_7jp70")

[node name="Vine4" type="Sprite2D" parent="."]
position = Vector2(1580, 500.00003)
rotation = -4.712389
scale = Vector2(1.9122899, 2.5559201)
texture = ExtResource("9_mxgkd")

[node name="Vine2" type="Sprite2D" parent="."]
position = Vector2(1119.0001, 709)
scale = Vector2(1.7421875, 2.4652777)
texture = ExtResource("10_g6gyw")

[node name="Cauldron" type="Sprite2D" parent="."]
position = Vector2(1547, 807)
texture = ExtResource("12_6cdou")

[node name="Crack" type="Sprite2D" parent="."]
position = Vector2(1420, 543)
rotation = 1.6144296
scale = Vector2(0.6972091, 0.7228762)
texture = ExtResource("13_i42df")

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
